--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <title>Spring Security Example</title>
+    <meta charset="UTF-8">
+    <title>User Page</title>
 </head>
 <body>
-<h1>User, welcome spring boot security page!</h1>
+<div>
+    <table border="1">
+        <p>User Information-Page</p>
+        <thead>
+            <tr>
+                <td>ID</td>
+                <td>Fist Name</td>
+                <td>Last Name</td>
+                <td>Age</td>
+                <td>Email</td>
+                <td>Role</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr  th:object="${user}">
+                <td th:text="*{getId()}"/>
+                <td th:text="*{getFistName()}"/>
+                <td th:text="*{getLastName()}"/>
+                <td th:text="*{getAge()}"/>
+                <td th:text="*{getEmail()}"/>
+                <td th:text="*{roles()}"/>
+            </tr>
+        </tbody>
 
+    </table>
+</div>
+
+<br>
+
+<form th:action="@{/logout}" method="get">
+    <input type="submit" value="exit"/>
+</form>
 
 </body>
 </html>
